<resources>
    <string name="app_name">WhatsApp</string>
    <string name="distribution">website</string>
    <string name="pref_file">com.whatsapp_preferences</string>
    <string name="sms_skipped">SMS verification skipped.</string>
    <string name="version">2.8.4278</string>
    <string name="platform">Android</string>
    <string name="software_expiration">20121209</string>
    <string name="target">rel</string>
    <string name="emoji_debug">false</string>
    <string name="maps_key">0YfjKhnxK4BnAuGV-Sq20174g6HG1YYFLerDEDA</string>
    <string name="account_sync_ACCOUNT_TYPE">com.whatsapp</string>
    <string name="copy">Copy</string>
    <string name="cancel">Cancel</string>
    <string name="alert">Alert</string>
    <string name="ok">OK</string>
    <string name="clear">Clear</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reset">Reset</string>
    <string name="unknown">Unknown</string>
    <string name="never">Never</string>
    <string name="later">Later</string>
    <string name="notes">Changes</string>
    <string name="attach">Attach</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="delete_confirmation">Delete message from “%s”?</string>
    <string name="delete_confirmation_self">Delete message?</string>
    <string name="unimplemented">unimplemented</string>
    <string name="skip">Skip</string>
    <string name="view_contact_unsupport">This functionality is not supported on your device.</string>
    <string name="next">Next</string>
    <string name="button_download">Download</string>
    <string name="color_none">None</string>
    <string name="color_white">White</string>
    <string name="color_red">Red</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_green">Green</string>
    <string name="color_cyan">Cyan</string>
    <string name="color_blue">Blue</string>
    <string name="color_purple">Purple</string>
    <string name="eula_title">Welcome to WhatsApp!</string>
    <string name="eula_description">Cross-platform mobile messaging with friends all over the world</string>
    <string name="eula_terms_and_conditions">Terms and conditions</string>
    <string name="eula_agree">Agree and continue</string>
    <string name="task_killer_detected">You have a 3rd party task killer installed. Task killers can cause problems with WhatsApp Messenger and are unsupported by our customer service team.</string>
    <string name="custom_rom_detected">You have a custom ROM installed. Custom ROMs can cause problems with WhatsApp Messenger and are unsupported by our customer service team.</string>
    <string name="dialog_button_more_info">More info</string>
    <string name="task_killer_info">"There are three problems with 3rd party task killers.

First, on Android 2.1, a task killer can PERMANENTLY kill WhatsApp. This causes you to LOSE messages that you would have otherwise expected to receive.

Second, on all Android versions, task killers can temporarily kill WhatsApp. This causes needless disconnects and reconnects to our server which DRAIN THE BATTERY of your device.

Third, on all Android versions, if the task killer closes WhatsApp, the WhatsApp server has no way of knowing that the connection has been closed. This means that message delivery will be impacted. Rest assured the message will be delivered but it could be DELAYED BY SEVERAL MINUTES as a result.

For these reasons, we recommend that you delete your 3rd party task killer.

Specifically, WhatsApp checks for:

Advanced Task Killer by ReChild
Advanced Task Manager by Cyrket / Arron
TasKiller by Cyrket / Arron
Task Manager by Adao

In Android 2.1 and later versions, the need for a task killer is greatly diminished.
If you really want to take the risk, we STRONGLY recommend that you add WhatsApp to the ignore list of your task killer. Please also understand that task killers are not supported by WhatsApp and that you use them at your own risk."</string>
    <string name="custom_rom_info">Custom ROMs have been known to cause problems with keyboard input methods, cloud to device (C2DM) notifications as well as timely and accurate message delivery. Further, many custom ROMs are bundled with task killing properties that cause the same problems as a 3rd party task killer. Please understand that custom ROMs are not supported by WhatsApp and that you use them at your own risk.</string>
    <string name="eula_tablets_not_supported">Note: tablets are currently not supported.</string>
    <string name="sms_notification_headline_verified">WhatsApp - Phone number verified!</string>
    <string name="sms_notification_headline_unverified">WhatsApp - Phone number not verified!</string>
    <string name="sms_notification_title_verified">Congratulations!</string>
    <string name="sms_notification_title_unverified">Problem!</string>
    <string name="sms_notification_message_verified">Phone number has been verified!</string>
    <string name="sms_notification_message_unverified">Phone number has not been verified!</string>
    <string name="install_app_shortcut">Include WhatsApp shortcut on home screen</string>
    <string name="menuitem_add">Add</string>
    <string name="menuitem_new">New</string>
    <string name="menuitem_groupchat">New group</string>
    <string name="menuitem_contacts">Contacts</string>
    <string name="menuitem_status">Status</string>
    <string name="menuitem_settings">Settings</string>
    <string name="menuitem_debug">Debug</string>
    <string name="menuitem_refresh">Refresh</string>
    <string name="menuitem_mute">Mute</string>
    <string name="menuitem_mute_off">Cancel mute</string>
    <string name="menuitem_broadcast">Broadcast message</string>
    <string name="initialization_fail_title">Failure</string>
    <string name="no_internet_title">No Internet</string>
    <string name="connectivity_self_help_instructions">Please reboot your phone if your connection problem persists.</string>
    <string name="initialization_fail_message">"Sorry, WhatsApp was unable to complete initialization. Please check that you are connected to the Internet and try again.

%s"</string>
    <string name="initialization_fail_beta_message">"Sorry, WhatsApp was unable to complete initialization. Please check that you are connected to the Internet and try again.

%s"</string>
    <string name="initialization_fail_retry">Retry</string>
    <string name="check_system_status">Check status</string>
    <string name="register_check_connectivity">"Unable to connect. Please check that you are connected to the Internet and try again.

%s"</string>
    <string name="contact1">Contact us</string>
    <string name="contact2">Questions? Comments? Need help?</string>
    <string name="tell_a_friend">Tell a friend</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="view">View</string>
    <string name="send_button">Send</string>
    <string name="settings_general">General</string>
    <string name="settings_help">Help</string>
    <string name="settings_faq">FAQ</string>
    <string name="settings_profile_info">Profile</string>
    <string name="settings_account_info">Account</string>
    <string name="settings_payment_info">Payment info</string>
    <string name="settings_about">About</string>
    <string name="settings_chat">Chat preferences</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_notification">Message notifications</string>
    <string name="settings_group_notification">Group notifications</string>
    <string name="settings_use_all_contacts">Show all contacts</string>
    <string name="settings_use_all_contacts_summary">Enable to also use hidden contacts</string>
    <string name="settings_msg_store_backup_now">Chat history backup</string>
    <string name="settings_msg_store_last_backup">Last backup: %1$s</string>
    <string name="settings_push_name">Name</string>
    <string name="settings_push_name_summary">This is not your username or pin. This name will be used for Notifications when messaging iPhone and Windows Phone contacts.</string>
    <string name="settings_chat_sound">Conversation tones</string>
    <string name="settings_chat_sound_summary">Play sounds for incoming and outgoing messages.</string>
    <string name="settings_notification_sound">Notification tone</string>
    <string name="settings_custom_conversation_sound">Contact ringtone</string>
    <string name="settings_notification_sound_summary">Select a sound to play for a new notification message</string>
    <string name="settings_custom_conversation_sound_summary">"Use contact's custom ringtone as the notification ringtone"</string>
    <string name="settings_notification_vibrate">Vibrate</string>
    <string name="settings_notification_vibrate_summary">Vibrate device when new message arrives while application is running.</string>
    <string name="settings_notification_popup">Popup notification</string>
    <string name="settings_notification_popup_summary">Popup a notification dialog when application is in background.</string>
    <string name="settings_notification_light">Light</string>
    <string name="settings_notification_light_summary">Choose a color to blink the notification light when a new message is received.</string>
    <string name="settings_block_list">Blocked contacts: %s</string>
    <string name="settings_block_list_summary">List of contacts that you have blocked.</string>
    <string name="settings_network_system_status">System status</string>
    <string name="settings_network_usage">Network usage</string>
    <string name="settings_input_enter_send">Enter is send</string>
    <string name="settings_input_enter_send_summary_on">Enter key will send your message</string>
    <string name="settings_input_enter_send_summary_off">Enter key will add a new line</string>
    <string name="settings_autodownload_images">Auto-download images</string>
    <string name="settings_font_size">Font size</string>
    <string name="settings_font_size_summary">Font size for conversation screen</string>
    <string name="settings_email_chat_history">Email chat history</string>
    <string name="settings_delete_account">Delete my account</string>
    <string name="network_usage_messages_sent">Messages sent:</string>
    <string name="network_usage_messages_received">Messages received:</string>
    <string name="network_usage_media_bytes_sent">Media bytes sent:</string>
    <string name="network_usage_media_bytes_received">Media bytes received:</string>
    <string name="network_usage_message_bytes_sent">Message bytes sent:</string>
    <string name="network_usage_message_bytes_received">Message bytes received:</string>
    <string name="network_usage_total_bytes_sent">Total bytes sent:</string>
    <string name="network_usage_total_bytes_received">Total bytes received:</string>
    <string name="network_usage_reset">Reset Statistics</string>
    <string name="network_usage_ask_reset_message">Are you sure you want to reset statistics?</string>
    <string name="whatsapp_recorder">WhatsApp Recorder</string>
    <string name="record_audio_play">Play</string>
    <string name="account_info_status_title">Account type</string>
    <string name="account_info_details">Details</string>
    <string name="account_info_expiration">Service expiration</string>
    <string name="account_info_account_num">Phone number</string>
    <string name="account_info_desc">Your service is attached to the phone number listed above. You can freely switch your mobile device, reinstall, or upgrade the software as long as your service phone number stays the same. We hope you enjoy our service.</string>
    <string name="account_info_purchase">Purchase online</string>
    <string name="account_info_send_addr">Send payment URL</string>
    <string name="popup_notification_hint">Type to reply</string>
</resources>