<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/white" android:ellipsize="end" android:id="@id/title_tv" android:paddingLeft="4.0dip" android:paddingTop="4.0dip" android:paddingRight="4.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/whatsapp_recorder" android:singleLine="true" />
    <TextView android:textSize="16.0sp" android:textColor="@color/light_gray" android:ellipsize="end" android:id="@id/preview_name_tv" android:paddingLeft="4.0dip" android:paddingRight="3.0dip" android:paddingBottom="4.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" />
    <View android:id="@id/divider" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <View android:background="#00000000" android:layout_width="fill_parent" android:layout_height="0.5px" />
    <TextView android:textSize="18.0sp" android:gravity="center" android:id="@id/record_audio_status_tv" android:padding="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Start Recording?" android:singleLine="true" />
    <ProgressBar android:id="@id/record_audio_progress" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" style="?android:attr/progressBarStyleHorizontal" />
    <SeekBar android:id="@id/audio_seekbar" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="4.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" style="?android:attr/progressBarStyleHorizontal" />
    <LinearLayout android:gravity="center_horizontal" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/record_audio_play_btn" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/record_audio_play" android:layout_weight="1.0" />
        <Button android:id="@id/record_audio_control_btn" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1.0" />
        <Button android:id="@id/record_audio_cancel_btn" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
