<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentRight="true">
            <View android:id="@id/prev_btn_ext" android:layout_width="40.0dip" android:layout_height="48.0dip" />
            <View android:id="@id/next_btn_ext" android:layout_width="40.0dip" android:layout_height="48.0dip" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:background="@drawable/popup_rounded_corner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/popup_layout" android:background="@drawable/popup_rounded_header" android:paddingLeft="2.0dip" android:paddingRight="2.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/header_height">
                <ImageView android:id="@id/popup_thumb" android:layout_width="44.69998dip" android:layout_height="44.69998dip" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" android:src="@drawable/icon" android:scaleType="fitCenter" />
                <LinearLayout android:gravity="left|center" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <com.whatsapp.TextEmojiLabel android:textSize="16.0dip" android:textStyle="bold" android:textColor="@color/white" android:ellipsize="end" android:gravity="left|center" android:layout_gravity="left|center" android:id="@id/popup_title" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:lines="1" android:singleLine="true" />
                    <TextView android:textSize="12.0dip" android:textStyle="italic" android:textColor="@color/white" android:ellipsize="end" android:gravity="left|center" android:layout_gravity="left|center" android:id="@id/conversation_contact_status" android:paddingLeft="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-2.0dip" android:lines="1" android:singleLine="true" style="@style/Text" />
                </LinearLayout>
                <ImageView android:layout_gravity="top|right|center" android:id="@id/navigation_divider" android:background="@drawable/divider" android:layout_width="wrap_content" android:layout_height="fill_parent" />
                <RelativeLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/navigation_holder" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip">
                    <TextView android:textSize="12.0dip" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/popup_count" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" />
                    <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <ImageView android:id="@id/prev_btn" android:paddingTop="16.0dip" android:layout_width="24.0dip" android:layout_height="32.0dip" android:src="@drawable/selector_media_prev" />
                        <ImageView android:id="@id/next_btn" android:paddingTop="16.0dip" android:paddingRight="2.0dip" android:layout_width="26.0dip" android:layout_height="32.0dip" android:src="@drawable/selector_media_next" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
            <com.whatsapp.GalleryView android:id="@id/gallery" android:background="#00000000" android:layout_width="fill_parent" android:layout_height="88.0dip" />
            <LinearLayout android:id="@id/edit_layout" android:paddingLeft="2.0dip" android:paddingRight="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.whatsapp.ConversationTextEntry android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="outsideOverlay" android:gravity="left" android:layout_gravity="center_vertical" android:id="@id/entry" android:scrollbars="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/popup_notification_hint" android:maxLines="6" android:capitalize="sentences" android:autoText="true" android:layout_weight="1.0" android:imeOptions="actionSend" android:scrollbarFadeDuration="300" android:scrollbarDefaultDelayBeforeFade="200" />
                <Button android:textSize="15.329987sp" android:textStyle="bold" android:layout_gravity="center_vertical" android:id="@id/send" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="72.0dip" android:text="@string/send_button" android:maxLines="1" android:lines="1" android:singleLine="true" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:background="@drawable/popup_rounded_footer" android:paddingLeft="2.0dip" android:paddingTop="6.0dip" android:paddingRight="2.0dip" android:paddingBottom="2.0dip" android:layout_width="fill_parent" android:layout_height="58.0dip" android:layout_marginTop="3.0dip">
                <Button android:layout_gravity="bottom" android:id="@id/popup_ok_btn" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/close" android:layout_weight="0.5" />
                <Button android:layout_gravity="bottom" android:id="@id/popup_action_btn" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/view" android:layout_weight="0.5" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
